[package]
name = "llm-response-cache"
version = "0.1.0"
edition = "2021"
description = "In-memory LRU cache for LLM responses keyed by request hash"
license = "MIT"
repository = "https://github.com/MukundaKatta/llm-response-cache-rs"
keywords = ["llm", "cache", "lru", "response", "agent"]
categories = ["caching"]
exclude = ["target/*", ".github/*", "*.log"]

[dependencies]
serde_json = "1"
sha2 = "0.10"
